# VPlot

./: .gitignore  LICENSE  README.md  README_ja.md  VPlot.bat  install.bat  install.sh  pyproject.toml
examples/: demo_waveform.vcsv
vplot/: __init__.py  __main__.py  parsers.py  viewer.py
